Fixed white gaps between section.
Fixed by changing body display to flex.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    display: flex;
+    flex-direction: column;
     max-width: 100%;
 }
 
@@ -168,14 +170,12 @@ body {
 }
 
 #biodata-section {
-    top: -40px;
     background-image: url("binary.webp");
 }
 
 #biodata-box-bg {
     margin: auto;
     position: relative;
-    top: 5vh;
     width: 90vw;
     height: 90vh;
     background-color: rgba(0, 0, 0, 0.5);
